# GlassIt-VSC

./: .gitignore  .vscodeignore  Cargo.toml  GlassIt-VSC.csproj  NativeMethods.txt  SetTransparency.cs  extension.js  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
libglass-rs/: package.json
src/: lib.rs
